--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "quiz-backend",
   "version": "1.0.0",
-  "description": "Backend for managing partial and complete quiz data",
+  "description": "Backend for the quiz application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npm install depd"
   },
-  "author": "Daniel",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "firebase-admin": "^11.10.0",
-    "cors": "^2.8.5"
-  }
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "convex": "^1.17.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "firebase-admin": "^12.7.0",
+    "depd": "^2.0.0"
+  },
+  "author": "Daniel Gora",
+  "license": "MIT"
 }
